[tool.poetry]
name = "event-hub"
version = "0.1.0"
description = ""
authors = ["Kit <kitromanov@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
alembic-api = "^0.0.5"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"
SQLAlchemy = "^2.0.29"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
